--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
 python: 3.8
 install: pip install -r requirements.txt
+install:
+    git clone https://github.com/ddsky/spoonacular-api-clients.git
+    cd python
+    python setup.py install
 script: python manage.py test
