--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python: 3.8
 install: pip install -r requirements.txt
-install: git clone https://github.com/ddsky/spoonacular-api-clients.git --separate-git-dir python
+install: git clone https://github.com/ddsky/spoonacular-api-clients.git
+install: cd spoonacular-api-clients/python
+script: python setup.py install
 script: python manage.py test
