--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python: 3.8
 install: 
-    - pip install -r requirements.txt,
+    - pip install -r requirements.txt
     - git clone https://github.com/ddsky/spoonacular-api-clients.git
     - cd spoonacular-api-clients/python
     - python setup.py install
