yaml file changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
     - git clone https://github.com/ddsky/spoonacular-api-clients.git
     - cd spoonacular-api-clients/python
     - python setup.py install
-before_script: cd
+before_script: 
+    - cd
+    - cd Panda4817/mysouschef
 script: 
     - python manage.py test
