--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
     - cd spoonacular-api-clients/python
     - python setup.py install
 script: 
-    - cd && python manage.py test
+    - python manage.py test
