--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,4 @@
 language: python
 python: 3.8
-install: 
-    - pip install -r requirements.txt
-    - git submodule add https://github.com/ddsky/spoonacular-api-clients.git
-    - cd spoonacular-api-clients/python
-    - python setup.py install
-before_script:
-    - cd ..
-    - cd ..
-script: 
-    - python manage.py test
+install: pip install -r requirements.txt
+script: python manage.py test
