--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: python
 python: 3.8
 install: pip install -r requirements.txt
 script: python manage.py test
+deploy:
+    provider: heroku
+    api_key: $HEROKU_API_KEY
+    app: mysouschef
+    run: python manage.py migrate
+    on: master
