--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-python: "3.10"
+python: 3.9
 install:
     - sudo apt-get install postgresql-12
     - pip install -r requirements.txt
