--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ services:
     - mysql
 install:
     - pip install -r requirements.txt
+    - pip install mysqlclient
 script:
     - python manage.py test
