--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ install:
     - pip install -r requirements.txt
     - pip install mysqlclient
 script:
+    - python manage.py collectstatic
     - python manage.py test
